--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="/assets/stylesheets/bootstrap.css" rel="stylesheet">
+    <link href="/vtvintsupport/assets/stylesheets/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="/vtvintsupport/assets/images/favicon.ico">
   </head>
 
   <body>
@@ -79,7 +79,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/javascripts/jquery-1.7.1.min.js"></script>
-    <script src="/assets/javascripts/bootstrap.min.js"></script>
+    <script src="/vtvintsupport/assets/javascripts/jquery-1.7.1.min.js"></script>
+    <script src="/vtvintsupport/assets/javascripts/bootstrap.min.js"></script>
   </body>
 </html>
