--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -3,13 +3,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>MongoDB PoC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="/vtvintsupport/assets/stylesheets/bootstrap.css" rel="stylesheet">
+    <link href="/assets/stylesheets/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -26,7 +26,8 @@
     <![endif]-->
 
     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="/vtvintsupport/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="/assets/images/favicon.ico">
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
   </head>
 
   <body>
@@ -35,7 +36,7 @@
     <div class="container-fluid">
       <div class="row-fluid">
 
-        <form class="form-horizontal" action="/login" method="POST">
+        <form class="form-horizontal" action="/login" method="POST" ng-app>
           <fieldset>
             <div id="legend" class="">
               <legend class="">Login</legend>
@@ -44,7 +45,7 @@
               <!-- Text input-->
               <label class="control-label" for="username">Username</label>
               <div class="controls">
-                <input name="username" type="text" placeholder="" class="input-xlarge"/>
+                <input name="username" ng-model="username" type="text" placeholder="" class="input-xlarge"/>
                 <p class="help-block"></p>
               </div>
             </div>
@@ -61,7 +62,7 @@
               <label class="control-label"></label>
               <!-- Button -->
               <div class="controls">
-                <button class="btn btn-default">Login</button>
+                <button class="btn btn-default">Login {{username}}</button>
               </div>
             </div>
           </fieldset>
@@ -79,7 +80,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/vtvintsupport/assets/javascripts/jquery-1.7.1.min.js"></script>
-    <script src="/vtvintsupport/assets/javascripts/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="/assets/javascripts/bootstrap.min.js"></script>
   </body>
 </html>
