--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -27,7 +27,6 @@
 
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="/assets/images/favicon.ico">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
   </head>
 
   <body>
@@ -81,6 +80,12 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script src="/assets/javascripts/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
+    <script src="/assets/javascripts/app.js"></script>
+    <script src="/assets/javascripts/controllers.js"></script>
+    <script src="/assets/javascripts/directives.js"></script>
+    <script src="/assets/javascripts/filters.js"></script>
+    <script src="/assets/javascripts/services.js"></script>
+    <script src="/assets/lib/bootstrap.min.js"></script>
   </body>
 </html>
